Tue Sep 16 12:59:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.inl:
          Reverted some wince changes which shouldn't have been committed

Tue Sep 16 12:47:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl:
          Reverted some wince changes which shouldn't have been committed

Tue Sep 16 12:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/checked_iterator.h:
          Check for dinkum stl.  Thanks to Mark Hebbel
          <Mark dot Hebbel at baslerweb dot com> for reporting this. This
          fixes bugzilla 3420

Tue Sep 16 12:19:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/Gateway/Gateway/Event_Channel.h
        * apps/gperf/src/Options.cpp
        * apps/gperf/src/Options.h
        * apps/JAWS2/JAWS/Server.cpp
        * apps/JAWS2/JAWS/Server.h
        * apps/JAWS3/bench/mkfiles.cpp
        * apps/JAWS3/bench/rqfiles.cpp
        * apps/JAWS3/http/HTTP_Service_Handler.cpp
        * apps/JAWS3/small/SS_Service_Handler.cpp
        * apps/JAWS/stress_testing/benchd.cpp
        * netsvcs/clients/Tokens/collection/collection.cpp
        * netsvcs/clients/Tokens/collection/rw_locks.cpp
        * netsvcs/clients/Tokens/deadlock/deadlock_detection_test.cpp
        * netsvcs/clients/Tokens/manual/manual.cpp
        * netsvcs/clients/Tokens/mutex/test_mutex.cpp
        * netsvcs/clients/Tokens/rw_lock/rw_locks.cpp
        * performance-tests/Misc/test_guard.cpp
        * performance-tests/RPC/client.cpp
          ACE_TCHAR changes

Tue Sep 16 10:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/*.bor:
        * bin/MakeProjectCreator/templates/bor.mpd
        * bin/MakeProjectCreator/templates/bordll.mpt
        * bin/MakeProjectCreator/templates/borexe.mpt
        * bin/MakeProjectCreator/config/borland.features
        * bin/MakeProjectCreator/modules/BorlandProjectCreator.pm