@@ -4,7 +4,7 @@
 project : aceexe {
   avoids += ace_for_tao
   exename = main
-  specific(borland, bmake) {
+  specific(bmake) {
     avoids += uses_wchar
   }
 }
